# investment

./: .gitignore  CONSENSUS_PROJECT_SUMMARY.md  DISTRIBUTED_CHALLENGE_README.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  conftest.py  consensus.html  contributors_list.txt  demo_current_state.py  pytest.ini  requirements.txt  run_examples.py  setup.py  stock_perf_simple.py  test_stock_analyzer.py
analysis/: coin_vis.py
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp
cpp/src/consensus/: block.cpp  message.cpp  streamlet_node.cpp  streamlet_protocol.cpp
cpp/tests/: test_streamlet.cpp
market_sim/: README.md  SUBMISSION.md  __init__.py  blockchain_sim.py  cli.py  demo_blockchain.py  demo_consensus.py  demo_streamlet.py  plot_chain.py  pow_sim.py  setup.py  streamlet.py  test_consensus_basic.py
market_sim/agents/: realtime_agent.py
market_sim/blockchain/: README.md  __init__.py  distributed.py  distributed_exchange.py  market_ledger.py  models.py  web3_integration.py
market_sim/config/: network_scenarios.yaml
market_sim/core/: blockchain.py
market_sim/examples/: __init__.py  basic_market.py  blockchain_trading.py  consensus_comparison.py  distributed_exchange.py  distributed_realtime_simulation.py  hft_simulation.py
market_sim/monitoring/: network_dashboard.py
market_sim/network/: network_simulator.py
market_sim/simulation/: __init__.py  market_env.py  portfolio.py
market_sim/strategies/: network_aware.py  trading_strategy.py
market_sim/tests/: test_blockchain.py  test_blockchain_sim.py  test_integration.py  test_pow_sim.py  test_streamlet.py
(+28 files in other folders)
